[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indicatron"
version = "0.1.0"
description = "A Python module for controlling WLED-powered LED strips"
authors = [
    {name = "Raphael Casimir", email = "raphael.casimir@tofupilot.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "pyserial>=3.5",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/jazari-akuna/indicatron"
"Bug Tracker" = "https://github.com/jazari-akuna/indicatron/issues"
