[metadata]
name = indicatron
version = 0.1.0
author = Raphael Casimir
author_email = raphael.casimir@tofupilot.com
description = Control WLED-powered LED strips to indicate process states or progress
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jazari-akuna/indicatron
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.0
    pyserial>=3.5

[options.packages.find]
where = .
